# peloton-iq

./: .gitignore  Dockerfile  Dockerfile.dash  README.md  ablation_results.json  pyproject.toml  render.yaml  ruff.toml
.github/workflows/: ci.yml
data/commentary/: pending_transcripts.csv
data/commentary/extracted/: 2017_criterium_du_dauphine_stage_2.json  2017_criterium_du_dauphine_stage_3.json  2017_criterium_du_dauphine_stage_5.json  2017_criterium_du_dauphine_stage_6.json  2017_criterium_du_dauphine_stage_8.json  2017_giro_d_italia_stage_10.json  2017_giro_d_italia_stage_11.json  2017_giro_d_italia_stage_12.json  2017_giro_d_italia_stage_13.json  2017_giro_d_italia_stage_14.json  2017_giro_d_italia_stage_15.json  2017_giro_d_italia_stage_16.json  2017_giro_d_italia_stage_18.json  2017_giro_d_italia_stage_19.json  2017_giro_d_italia_stage_2.json  2017_giro_d_italia_stage_3.json  2017_giro_d_italia_stage_7.json  2017_giro_d_italia_stage_8.json  2017_giro_d_italia_stage_9.json  2017_il_lombardia.json  2017_la_fleche_wallonne.json  2017_liege_bastogne_liege.json  2017_paris_nice_stage_1.json  2017_paris_nice_stage_2.json  2017_paris_nice_stage_3.json  2017_paris_nice_stage_6.json  2017_paris_roubaix.json  2017_strade_bianche.json  2017_tirreno_adriatico_stage_3.json  2017_tirreno_adriatico_stage_5.json  2017_tirreno_adriatico_stage_6.json  2017_tirreno_adriatico_stage_7.json  2017_tour_de_france_stage_10.json  2017_tour_de_france_stage_11.json  2017_tour_de_france_stage_12.json  2017_tour_de_france_stage_14.json  2017_tour_de_france_stage_15.json  2017_tour_de_france_stage_16.json  2017_tour_de_france_stage_17.json  2017_tour_de_france_stage_18.json  (+463 more)
data/commentary/extracted_original/: 2017_amstel_gold_race.json  2017_binckbank_tour_stage_6.json  2017_giro_d_italia_stage_1.json  2017_paris_nice_stage_4.json  2017_paris_nice_stage_5.json  2017_tour_de_france_stage_1.json  2017_tour_de_france_stage_13.json  2017_tour_de_france_stage_14.json  2017_tour_de_france_stage_18.json  2017_tour_de_france_stage_19.json  2017_tour_de_france_stage_2.json  2017_tour_de_france_stage_3.json  2017_tour_de_france_stage_4.json  2017_tour_de_france_stage_9.json  2019_il_lombardia.json  2019_tour_de_france_stage_10.json  2019_tour_de_france_stage_11.json  2019_tour_de_france_stage_15.json  2019_tour_de_france_stage_17.json  2019_tour_de_france_stage_19.json  2019_tour_de_france_stage_20.json  2019_tour_de_france_stage_21.json  2019_tour_de_france_stage_4.json  (+155 more)
data/eval/: ragas_results.json
data/processed/: course_data_clean.csv
data/raw/: structured_course_data.csv
models/: metrics.json
models/ablation_baseline/: study_lgb_trials.csv  study_xgb_trials.csv
models/ablation_enriched/: metrics.json  study_lgb_trials.csv  study_xgb_trials.csv
notebooks/: 01_data_ingestion.ipynb  02_embeddings.ipynb  03_hybrid_search.ipynb  07_commentary_ingestion.ipynb  07_commentary_ingestion_v2.ipynb  08_agent.ipynb  commentary_eda.ipynb  commentary_ingestion.ipynb  commentary_ingestion_v3.ipynb  commentary_ingestion_v4.ipynb  prediction_model.ipynb
scripts/: build_gpx_cache.py  build_profiles.py  check_sentiment_coverage.py  compare_commentary_ablation.py  push_artifacts.py  run_agent.py  run_api.py  run_commentary.py  run_dash.py  run_embeddings.py  run_ingestion.py  run_ragas_eval.py  run_training.py
src/peloton_iq/: app.py  artifacts.py  config.py
tests/: conftest.py  pytest.ini  test_commentary.py  test_form_features.py  test_ragas_eval.py  test_tools.py
(+3577 files in other folders)
