[project]
name = "peloton-iq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "anthropic>=0.99.0",
    "deepeval>=4.0.0",
    "google-api-python-client>=2.196.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langgraph>=1.1.10",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "procyclingstats>=0.2.8",
    "pyarrow>=24.0.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.5.1",
    "wikipedia-api>=0.14.1",
    "xgboost>=3.2.0",
    "youtube-transcript-api>=1.2.4",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp312-cp312-win_amd64.whl" }

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
