[project]
name = "peloton-iq"
version = "0.1.0"
description = "UCI WorldTour race intelligence powered by ML, RAG, and LLM synthesis"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "anthropic>=0.99.0",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.196.0",
    "httpx>=0.28.1",
    "langgraph>=1.1.10",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "prefect>=3.0.0",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "uvicorn[standard]>=0.30.0",
    "xgboost>=3.2.0",
    "youtube-transcript-api>=1.2.4",
    "python-dotenv>=1.2.2",
    "plotly>=6.8.0",
    "dash>=4.2.0",
    "gpxpy>=1.6.2",
    "ruff>=0.15.17",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "deepeval>=4.0.0",
    "ragas>=0.4.3",
    "matplotlib>=3.10.9",
    "procyclingstats>=0.2.8",
    "wikipedia-api>=0.14.1",
]

[project.scripts]
peloton-agent = "peloton_iq.agent.graph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peloton_iq"]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp312-cp312-win_amd64.whl" }

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
